# SpeedTyper

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  SpeedTyper.desktop  compile_commands.json  conanfile.txt  main.cpp
assets/: google-1000-english.txt  google-10000-english.txt
cmake/: CompilerWarnings.cmake  Conan.cmake
include/: constants.h  words_provider.hpp
src/: CMakeLists.txt  DatabaseScore.cpp  DatabaseScore.h  DisplayedWords.cpp  DisplayedWords.h  InputField.cpp  InputField.h  Score.cpp  Score.h  SfmlComponents.cpp  SfmlComponents.h  Timer.h  WordEntity.cpp  WordEntity.h  WordsProvider.cpp  WordsProvider.h  main.cpp  main_with_imgui.cpp  words_provider.cpp
test/: CMakeLists.txt  TabSample.h  TabScore.h  catch_main.cpp  imgui_demo.cpp  tabscore_test_db.sl3  test_gui.cpp  test_imgui_demo.cpp  test_matplot.cpp  tests.cpp  tests_db.cpp
